# cli-tool

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  renovate.json
.forgejo/workflows/: build.yaml  changelog.yaml  release.yaml  renovate.yaml
prompts/: yt-summary.md
src/: ai_calls.rs  config.rs  main.rs  plugins.rs  yt.rs
src/plugins/: net.rs  tv.rs  yt.rs
