[package]
name = "cli-tool"
version = "0.3.0"
edition = "2024"

[dependencies]
tempfile = "3.27.0"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = [ "json", "blocking" ] }
serde_json = "1.0.150"
clap = { version = "4.6.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10.4"
getset = "0.1.7"
directories = "6.0.0"
